week1-hw-updates-on-mentor-comments

--- a/homework/index.html
+++ b/homework/index.html
@@ -16,11 +16,24 @@
 </head>
 
 <body>
-  <div class="header">
-    <p></p>HYF Repositories</p>
+  <div id="root">
+    <header class="header">
+      <p>HYF Repositories</p>
+      <select>
+        <option value="1">Değerler buraya gelecek</option>
+        <option value="2">Değerler buraya gelecek</option>
+      </select>
+    </header>
+    <main class="main-container">
+      <section class="repo-container">
+
+      </section>
+      <section class="contributors-container">
+
+      </section>
+    </main>
   </div>
-  <div id="root"></div>
-  
+
   <script src="./index.js"></script>
 </body>
 
