--- a/homework/index.html
+++ b/homework/index.html
@@ -29,7 +29,7 @@
       </section>
     </main>
   </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./index.js"></script>
 </body>
 
